--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -15,13 +15,16 @@
 .slider__next
 	right: -75px
 	+sized-sprite($icons, next)
-.slider__list	
+.slider__list
 	ul
 		overflow: hidden
+		font-size: 0
 	li
 		position: relative
-		float: left
+		display: inline-block
+		vertical-align: top
 		width: 283px
+		width: 277px
 		margin-bottom: 55px
 		padding: 0 18px
 .slider__pic
