--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -47,6 +47,8 @@
 	+sized-sprite($icons, rejected)
 .slider__pending
 	+sized-sprite($icons, pending)
+.slider__deleted
+	+sized-sprite($icons, deleted)
 .slider__pic-out
 	position: absolute
 	top: 0
