--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -8,6 +8,7 @@ $gray-dark: #9ca199
 $yellow: #f1dba1
 $green: #8a8522
 $green-light: #a9a555
+$orange: #cb8247
 //fonts
 @import url(http://fonts.googleapis.com/css?family=Cuprum)
 @font-face 
