--- a/sass/_inner.sass
+++ b/sass/_inner.sass
@@ -72,15 +72,23 @@
 	margin-bottom: 50px
 .steps__title
 	margin-bottom: 100px
-	font-size: 58px	
+	font-size: 60px	
 	color: $green-light
 	text-align: center
 	span
 		display: block
 		margin-left: 200px
-		font-size: 80px
+		font-size: 54px
 		color: $blue-dark
 		text-align: right
+	span.third
+		margin-right: 100px
+		font-size: 44px
+		a
+			color: $red
+			&:hover
+				color: $blue-dark
+
 .steps__list
 	font-size: 0
 	text-align: center
@@ -93,12 +101,10 @@
 		margin-bottom: 30px
 	.title
 		margin-bottom: 25px
-		font-size: 38px 
-		color: $blue-dark
-		span
-			color: $red
+		font-size: 52px 
+		color: $green-light
 	p
-		font-size: 15px
+		font-size: 20px
 		color: $blue-dark
 		text-shadow: rgba(255,255,255,0.3) 1px 1px 0
 		line-height: 1.4
